--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "server",
-  "version": "0.1.0",
+  "name": "toBike",
+  "version": "0.2.0",
   "main": "serverExpress.js",
   "dependencies": {
-    "express": "^4.13.4",
+    "basic-auth": "^1.0.4",
     "cheerio": "^0.20.0",
-	"request": "^2.73.0",
-    "basic-auth": "^1.0.4"
+    "express": "^4.13.4",
+    "request": "^2.73.0",
+    "simple-node-logger": "^0.93.12"
   },
   "engines": {
     "npm": ">= 1.0.0"
