--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
   "name": "toBike",
-  "version": "0.2.2",
-  "main": "serverExpress.js",
+  "description": "simply toBike service front-end clean wrapper",
+  "author": "Michele Sartor",
+  "license": {
+    "type": "MIT",
+    "url": "https://opensource.org/licenses/MIT"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/msartor92/bike_sharing/"
+  },
+  "version": "0.2.3",
+  "main": "server.js",
   "dependencies": {
     "basic-auth": "^1.0.4",
     "cheerio": "^0.20.0",
