--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "simple-node-logger": "^0.93.12"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-concat": "^1.0",
-    "grunt-contrib-uglify": "^1.0",
-    "grunt-contrib-copy"  : "^1.0",
-    "grunt-contrib-cssmin": "^1.0"
+    "grunt": ">=0.4.5",
+    "grunt-contrib-concat": ">=1.0",
+    "grunt-contrib-uglify": ">=1.0",
+    "grunt-contrib-copy"  : ">=1.0",
+    "grunt-contrib-cssmin": ">=1.0"
   },
   "engines": {
     "npm": ">= 1.0.0"
