--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "build": "grunt build"
   },
   "dependencies": {
+    "angular-loading-bar": "0.9.0",
     "basic-auth": "^1.0.4",
     "cheerio": "^0.20.0",
+    "compression": "^1.6.2",
     "express": "^4.13.4",
     "request": "^2.73.0",
     "simple-node-logger": "^0.93.12"
   },
   "devDependencies": {
-    "grunt": ">=0.4.5",
+    "grunt": "^1.0.1",
     "grunt-contrib-concat": ">=1.0",
     "grunt-contrib-uglify": ">=1.0",
     "grunt-contrib-copy"  : ">=1.0",
