[DPL] init test

--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "simple-node-logger": "^0.93.12"
   },
   "devDependencies": {
+    "git-notifier": "^2.1.0",
     "grunt": "^1.0.1",
     "grunt-contrib-concat": ">=1.0",
     "grunt-contrib-uglify": ">=1.0",
     "grunt-contrib-copy"  : ">=1.0",
-    "grunt-contrib-cssmin": ">=1.0"
+    "grunt-contrib-cssmin": ">=1.0",
+    "shelljs": "^0.7.7"
   },
   "engines": {
     "npm": ">= 1.0.0"
