--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "simple-node-logger": "^0.93.12"
   },
   "devDependencies": {
-    "git-notifier": "^2.1.0",
+    "github-webhook-handler": "^0.6.0",
     "grunt": "^1.0.1",
     "grunt-contrib-concat": ">=1.0",
     "grunt-contrib-uglify": ">=1.0",
